--- a/DetailTECMovilApp/View/ClienteGestion.xaml
+++ b/DetailTECMovilApp/View/ClienteGestion.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="DetailTECMovilApp.ClienteGestion"
-             Title="Cliente"
+             Title="My Info"
              BackgroundColor="White">
     <ContentPage.Content>
         <StackLayout>
