--- a/DetailTECMovilApp/View/ConsultaFact.xaml
+++ b/DetailTECMovilApp/View/ConsultaFact.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="DetailTECMovilApp.ConsultaFact"
-             Title="Mis Facturas"
+             Title="My Receipts"
              BackgroundColor="White">
     <ContentPage.Content>
         <StackLayout>
