--- a/DetailTECMovilApp/View/ConsultaFact.xaml
+++ b/DetailTECMovilApp/View/ConsultaFact.xaml
@@ -4,11 +4,48 @@
              x:Class="DetailTECMovilApp.ConsultaFact"
              Title="My Receipts"
              BackgroundColor="White">
-    <ContentPage.Content>
+
         <StackLayout>
-            <Label Text="Mis Facturas"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+            
+            <CollectionView x:Name="FacturaView"
+                        SelectionMode="Single"
+                        Margin="20,5,20,0">
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+
+                        <SwipeView>
+                    
+                            <SwipeView.LeftItems>
+                                <SwipeItem Text="Info"
+                                        BackgroundColor="LightYellow"
+                                        CommandParameter="{Binding .}"
+                                        Invoked="SwipeItem_Invoked"/>
+                            </SwipeView.LeftItems>
+                            <Grid BackgroundColor="White">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="*"/>
+                                </Grid.RowDefinitions>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="20"/>
+                                </Grid.ColumnDefinitions>
+                            <Label Text="{Binding Numero_factura}"
+                                   Grid.Row="0" Grid.RowSpan="2"
+                                   HorizontalOptions="CenterAndExpand"
+                                   VerticalOptions="CenterAndExpand"/>
+                            <Label Text="{Binding monto}"
+                                   Grid.Row="0" Grid.Column="1"
+                                   VerticalOptions="CenterAndExpand"
+                                   FontSize="20"
+                                   FontAttributes="Bold"/>
+                                <Label Text="{Binding tipo_de_pago}"
+                                   Grid.Row="1" Grid.Column="1"/>
+                            </Grid>
+                        </SwipeView>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+
+
+            </CollectionView>
         </StackLayout>
-    </ContentPage.Content>
+            
 </ContentPage>
