--- a/DetailTECMovilApp/View/ConsultaFact.xaml
+++ b/DetailTECMovilApp/View/ConsultaFact.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="DetailTECMovilApp.ConsultaFact"
-             Title="My Receipts"
+             Title="Mis Facturas"
              BackgroundColor="White">
 
         <StackLayout>
@@ -26,7 +26,7 @@
                                     <RowDefinition Height="*"/>
                                 </Grid.RowDefinitions>
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="20"/>
+                                    <ColumnDefinition Width="20"/>  
                                 </Grid.ColumnDefinitions>
                             <Label Text="{Binding Numero_factura}"
                                    Grid.Row="0" Grid.RowSpan="2"
