--- a/DetailTECMovilApp/View/ClienteGestion.xaml
+++ b/DetailTECMovilApp/View/ClienteGestion.xaml
@@ -2,13 +2,73 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="DetailTECMovilApp.ClienteGestion"
-             Title="My Info"
+             Title="Mi Info"
              BackgroundColor="White">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Clientes"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+            <Label Text="Nombre:" HorizontalOptions="StartAndExpand" Padding="30,20,0,0" FontSize="30" TextColor="Black"/>
+            <Label x:Name="NameDisplay" FontSize="20" Padding="30,0,0,0">
+                <Label.FormattedText>
+                    <FormattedString>
+                        <FormattedString.Spans>
+                            <Span Text="{Binding Nombre}"/>
+                        </FormattedString.Spans>
+                    </FormattedString>
+                </Label.FormattedText>
+            </Label>
+
+            <Label Text="Cedula:" HorizontalOptions="StartAndExpand" Padding="30,20,0,0" FontSize="30" TextColor="Black"/>
+            <Label x:Name="CedulaDisplay" FontSize="20" Padding="30,0,0,0">
+                <Label.FormattedText>
+                    <FormattedString>
+                        <FormattedString.Spans>
+                            <Span Text="{Binding Cedula}"/>
+                        </FormattedString.Spans>
+                    </FormattedString>
+                </Label.FormattedText>
+            </Label>
+
+            <Label Text="Apellidos:" HorizontalOptions="StartAndExpand" Padding="30,20,0,0" FontSize="30" TextColor="Black"/>
+            <Label x:Name="ApDisplay" FontSize="20" Padding="30,0,0,0">
+                <Label.FormattedText>
+                    <FormattedString>
+                        <FormattedString.Spans>
+                            <Span Text="{Binding Apellido1}"/>
+                      
+                        </FormattedString.Spans>
+                    </FormattedString>
+                </Label.FormattedText>
+            </Label>
+
+            <Label Text="Nombre:" HorizontalOptions="StartAndExpand" Padding="30,20,0,0" FontSize="30" TextColor="Black"/>
+            <Label x:Name="CorreoDisplay" FontSize="20" Padding="30,0,0,0">
+                <Label.FormattedText>
+                    <FormattedString>
+                        <FormattedString.Spans>
+                            <Span Text="{Binding Correo}"/>
+                        </FormattedString.Spans>
+                    </FormattedString>
+                </Label.FormattedText>
+            </Label>
+
+            <Label Text="Contraseña:" HorizontalOptions="StartAndExpand" Padding="30,20,0,0" FontSize="30" TextColor="Black"/>
+            <StackLayout Padding="40">
+           
+            <Entry x:Name="Contraseña" FontSize="20" Placeholder="Contraseña" PlaceholderColor="LightGray"/>
+                
+            <Button
+                VerticalOptions="Center"
+                Text="Cambiar Contraseña"
+                TextColor="Black"
+                BackgroundColor="#00BEE0"
+                BorderWidth="1.5"
+                CornerRadius="50"
+                Clicked="Button_Clicked"/>
+
+            </StackLayout>
+
+           
+
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
