--- a/DetailTECMovilApp/View/MainPage.xaml
+++ b/DetailTECMovilApp/View/MainPage.xaml
@@ -6,16 +6,16 @@
 
     <StackLayout>
         <Frame BackgroundColor="#FFA534" Padding="24" CornerRadius="0">
-            <Label Text="Welcome to Xamarin.Forms!" HorizontalTextAlignment="Center" TextColor="White" FontSize="36"/>
+            <Label Text="Welcome to DetailTEC" HorizontalTextAlignment="Center" TextColor="White" FontSize="36"/>
         </Frame>
-        <Label Text="Start developing now" FontSize="Title" Padding="30,10,30,10"/>
-        <Label Text="Make changes to your XAML file and save to see your UI update in the running app with XAML Hot Reload. Give it a try!" FontSize="16" Padding="30,0,30,0"/>
+        <Label Text="To use the app select the menu button in the top left" FontSize="Title" Padding="30,10,30,10" HorizontalTextAlignment="Center"/>
+        
         <Label FontSize="16" Padding="30,24,30,0">
             <Label.FormattedText>
                 <FormattedString>
                     <FormattedString.Spans>
                         <Span Text="Learn more at "/>
-                        <Span Text="https://aka.ms/xamarin-quickstart" FontAttributes="Bold"/>
+                        <Span Text="https://tecdigital.tec.ac.cr/dotlrn/" FontAttributes="Bold"/>
                     </FormattedString.Spans>
                 </FormattedString>
             </Label.FormattedText>
